--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ btn:active {
 .ant-box .content1 {
   background-color: #999;
   color: black;
-  font-size: 1.5 rem;
+  font-size: 1.1rem;
   padding: 2.5rem;
   border-radius: 25px;
   position: relative;
@@ -373,7 +373,7 @@ btn:active {
 .ant-box .content2 {
   background-color: #999;
   color: black;
-  font-size: 1.5 rem;
+  font-size: 1.1rem;
   padding: 2.5rem;
   text-align: center;
   border-radius: 25px;
@@ -387,7 +387,7 @@ btn:active {
 .ant-box .content3 {
   background-color: #999;
   color: black;
-  font-size: 1.5 rem;
+  font-size: 1.1rem;
   padding: 2.5rem;
   text-align: center;
   border-radius: 25px;
@@ -398,6 +398,7 @@ btn:active {
 }
 
 .row-ant {
+  /* ant-box stay on middle*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -489,12 +490,6 @@ btn:active {
   padding: 5rem 2rem;
   background-color: #f5f5f5;
   /* fundal pentru contrast */
-}
-
-.contact-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .contact-heading {
@@ -632,7 +627,6 @@ btn:active {
 }
 
 /*Laurentiu Part for antrenamente*/
-
 #ch1 {
   display: none;
 }
@@ -696,9 +690,8 @@ btn:active {
 }
 
 /*Laurentiu Gallery part*/
-
 .section-gallery {
-  margin-top: 2%;
+  margin-top: 3%;
   padding-top: 10px;
   margin-left: 20px;
 }
@@ -711,7 +704,6 @@ btn:active {
 
 /* 4 coloane una langa alta */
 .column {
-  flex: 25%;
   max-width: 25%;
   padding: 0 5px;
 }
@@ -772,7 +764,6 @@ label[for="hamburger"] {
 
   /* Responsive - facem 2 coloane din 4 */
   .column {
-    flex: 50%;
     max-width: 50%;
   }
 
@@ -810,7 +801,6 @@ label[for="hamburger"] {
 
   /* Responsive- coloanele merg una peste alta in loc de una langa alta */
   .column {
-    flex: 100%;
     max-width: 100%;
   }
 
